# esp-recorder

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
components/communication/: CMakeLists.txt  communication.cpp  communication.hpp  ftp_client.cpp  ftp_client.hpp
components/ftp_client/: CMakeLists.txt  ftp_client.cpp  ftp_client.hpp
components/i2s_sampler/: CMakeLists.txt  i2s_sampler.cpp  i2s_sampler.hpp
components/screen/: CMakeLists.txt  screen_driver.cpp  screen_driver.hpp
components/sd_card/: CMakeLists.txt  sd_card.cpp  sd_card.hpp
components/settings/: CMakeLists.txt  settings.hpp
components/spi_driver/: CMakeLists.txt  spi2_bus.hpp  spi_device.cpp  spi_device.hpp
components/spi_driver/base/: spi_bus.cpp  spi_bus.hpp
components/wav_file/: CMakeLists.txt  wav_header.hpp  wav_reader.cpp  wav_reader.hpp  wav_writer.cpp  wav_writer.hpp
lib/audio_input/src/: I2SMEMSSampler.cpp  I2SMEMSSampler.h
lib/sd_card/src/: SDCard.cpp
lib/wav_file/src/: WAVFileReader.cpp  WAVFileWriter.cpp
main/: CMakeLists.txt  config.cpp  config.h  main.cpp  server.cpp  server.h
