idf_component_register(SRCS 
                    "main.cpp" 
                    "config.cpp" 
                    "server.cpp" 
                    "..\\lib\\audio_input\\src\\I2SMEMSSampler.cpp"
                    "..\\lib\\sd_card\\src\\SDCard.cpp"
                    "..\\lib\\wav_file\\src\\WAVFileWriter.cpp"                    
                    INCLUDE_DIRS ".")
